完善设置工作时间功能

--- a/pages/editWorkingTime/editWorkingTime.wxml
+++ b/pages/editWorkingTime/editWorkingTime.wxml
@@ -1,26 +1,19 @@
 <!--pages/editWorkingTime/editWorkingTime.wxml-->
 <view class="weui-cells weui-cells_after-title">  
-  <view class="weui-cell weui-cell_select">
-      <view class="weui-cell__hd weui-cell__hd_in-select-after">
-          <view class="weui-label">上班时间</view>
-      </view>
-      <view class="weui-cell__bd">
-          <picker bindchange="" value="{{startTimeIndex}}" range="{{startTime}}">
-              <view class="weui-select weui-select_in-select-after">{{startTime[startTimeIndex]}}</view>
-          </picker>
-      </view>
+  <view class="weui-cell">
+    <view class="weui-cell__bd">上班时间</view>
+    <picker style='width:60%;' class="weui-cell__ft weui-cell__ft_in-access" bindchange="bindWorkTimeBeginChange" value="{{startTimeIndex}}" range="{{startTime}}">
+      <view class="picker">{{startTime[startTimeIndex]}}</view>
+    </picker>      
   </view>
 
-  <view class="weui-cell weui-cell_select">
-      <view class="weui-cell__hd weui-cell__hd_in-select-after">
-          <view class="weui-label">下班时间</view>
-      </view>
-      <view class="weui-cell__bd">
-          <picker bindchange="" value="{{endTimeIndex}}" range="{{endTime}}">
-              <view class="weui-select weui-select_in-select-after">{{endTime[endTimeIndex]}}</view>
-          </picker>
-      </view>
+  <view class="weui-cell">
+    <view class="weui-cell__bd">下班时间</view>
+    <picker style='width:60%;' class="weui-cell__ft weui-cell__ft_in-access" bindchange="bindWorkTimeEndChange" value="{{endTimeIndex}}" range="{{endTime}}">
+      <view class="picker">{{endTime[endTimeIndex]}}</view>
+    </picker>      
   </view>
+
 </view>
 
 <button style='margin-top:112rpx;' class="button button_margin_16" type="primary" bindtap="onSave">保存</button>
