--- a/pages/settingTime/settingTime.wxml
+++ b/pages/settingTime/settingTime.wxml
@@ -3,7 +3,7 @@
 <view class="weui-cells weui-cells_after-title">
     <navigator url="../workingTimeDetail/workingTimeDetail" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">工作时间</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access">08:00-18:00</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access">{{workTimeBegin}}-{{workTimeEnd}}</view>
     </navigator>
     <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">午休时间</view>
