--- a/pages/settingTime/settingTime.wxml
+++ b/pages/settingTime/settingTime.wxml
@@ -5,7 +5,7 @@
         <view class="weui-cell__bd">工作时间</view>
         <view class="weui-cell__ft weui-cell__ft_in-access">{{workTimeBegin}}-{{workTimeEnd}}</view>
     </navigator>
-    <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+    <navigator url="../lunchTimeDetail/lunchTimeDetail" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">午休时间</view>
         <view class="weui-cell__ft weui-cell__ft_in-access">12:30-13:30</view>
     </navigator>
