--- a/pages/editSpecialPrice/editSpecialPrice.wxml
+++ b/pages/editSpecialPrice/editSpecialPrice.wxml
@@ -1,40 +1,34 @@
 <!--pages/editSpecialPrice/editSpecialPrice.wxml-->
-<view class="weui-cells__title">开始日期至少设置到3月17日 (两天后)</view>
+<view class="weui-cells__title">开始日期至少设置到{{afterTomorrowUI}} (两天后)</view>
 <view class="weui-cells weui-cells_after-title">
     <view class="weui-cell">
         <view class="weui-cell__bd">开始日期</view>
-         <picker style='width:60%;' class="weui-cell__ft weui-cell__ft_in-access" mode="date" data-index="1" bindchange="bindDateChange">
-              <view class="picker">请选择</view>
-          </picker>
-        
+         <picker style='width:60%;' class="{{'create' == mode ? 'weui-cell__ft_in-access':''}} weui-cell__ft " disabled='{{pickDisabled}}' mode="date" bindchange="bindDateBeginChange" value="{{afterTomorrow}}" start="{{afterTomorrow}}">
+            <view class="picker">{{specialDateBegin}}</view>
+          </picker>        
     </view>
 
-    <view class="weui-cell" data-index="2">
+    <view class="weui-cell">
         <view class="weui-cell__bd">结束日期</view>
-         <picker style='width:60%;' class="weui-cell__ft weui-cell__ft_in-access" mode="date" data-index="2" bindchange="bindDateChange">
-                <view class="picker">请选择</view>
-            </picker>
+         <picker style='width:60%;' class="{{'create' == mode ? 'weui-cell__ft_in-access':''}} weui-cell__ft" disabled='{{pickDisabled}}' mode="date" bindchange="bindDateEndChange" value="{{afterTomorrow}}" start="{{afterTomorrow}}">
+            <view class="picker">{{specialDateEnd}}</view>
+          </picker>
     </view>
 </view>
 
 <view class="weui-cells__title">洗车价格</view>
 <view class="weui-cells weui-cells_after-title">
-    <view class="weui-cell">
-        <view class="weui-cell__bd">轿车</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access">35元</view>                 
-    </view>
-
-    <view class="weui-cell" data-index="2">
-      <view class="weui-cell__bd">SUV</view>
-      <view class="weui-cell__ft weui-cell__ft_in-access">45元</view> 
+    <view wx:for="{{carModels}}" wx:key="*this" wx:for-item="carModel" class="weui-cell" data-carmodel="{{carModel}}" bindtap='onEditPirce'>
+        <view class="weui-cell__bd">{{carModel.model}}</view>
+        <view class="{{'create' == mode ? 'weui-cell__ft_in-access':''}} weui-cell__ft">{{carModel.specialPrice/100}}元</view>                 
     </view>
 </view>
 
-<view class="weui-btn-area">
+<view wx:if="{{'create' == mode}}" class="weui-btn-area">
     <button bindtap="onSave" class="weui-btn" type="primary">保存</button>
 </view>
 
-<view style='text-align:center; line-height: 44px;' class="cells-extra_btn font-size_17 font-color_red">
+<view wx:if="{{'edit' == mode}}" style='text-align:center; line-height: 44px;' class="cells-extra_btn font-size_17 font-color_red" bindtap='onDel'>
     删除
 </view>
 
@@ -43,8 +37,8 @@
   <view class="line auth-view_line"></view>
   <view class="popup-view_info auth-view_info">您可以通过设置特别服务日期,来重</view>
   <view style='margin-top:3px;' class="popup-view_info auth-view_info">定义洗车服务的价格,比如节假日</view>
-  <view style='margin-top:3px;' class="popup-view_info auth-view_info">时,特别服务日期不影响日常洗车价格.</view>
-  <view style='margin-top:3px;' class="popup-view_info auth-view_info">格.</view>
+  <view style='margin-top:3px;' class="popup-view_info auth-view_info">时,特别服务日期不影响日常洗车价</view>
+  <view style='margin-top:3px;' class="popup-view_info auth-view_info">格。</view>
   <button class="auth-view_btn weui-btn popup-view-button font-weight" type="primary" bindtap='onStart'>开始设置</button>
   <button style='color:#979797;border-color:#979797;' class="auth-view_btn weui-btn popup-view-button font-weight" type="primary" plain='true' bindtap='onCancel'>暂不设置</button>
 </van-popup>
