--- a/pages/editMemberCard/editMemberCard.wxml
+++ b/pages/editMemberCard/editMemberCard.wxml
@@ -6,7 +6,7 @@
             <view class="weui-label">充值额度</view>
         </view>
         <view class="weui-cell__bd">
-            <input type="number" class="weui-input" placeholder="请输入数字金额" name="payAmount" />
+            <input type="number" class="weui-input" placeholder="请输入数字金额" name="payAmount" value="{{rechargeType.payAmount}}" />
         </view>
     </view>
     <view class="weui-cell weui-cell_input">
@@ -14,7 +14,7 @@
             <view class="weui-label">实际到账</view>
         </view>
         <view class="weui-cell__bd">
-            <input type="number" class="weui-input" placeholder="请输入数字金额" name="rechargeAmount"/>
+            <input type="number" class="weui-input" placeholder="请输入数字金额" name="rechargeAmount" value="{{rechargeType.rechargeAmount}}"/>
         </view>
     </view>
   </view>
