--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 124px;
   background-color: white;
+  z-index: 100;
 }
 .date-view {
   height: 44px;
@@ -19,6 +20,7 @@
   height: 80px;
   align-items: center;
   justify-content: space-between;
+ 
 }
 
 .header-view-info_btn {
