--- a/pages/inviteEmploye/inviteEmploye.wxml
+++ b/pages/inviteEmploye/inviteEmploye.wxml
@@ -2,15 +2,16 @@
 <view class="page">
   <view class="weui-msg">
       <view class="weui-msg__icon-area">
-          <image class="avatar" src="https://wx.qlogo.cn/mmopen/vi_32/DYAIOgq83eprsWvMtFlzLqDumbicOePRyib4I5dI7ABvKmTsYbFydG06eBdQnVlFZPL5piaFY4zsVeBVMf460hH7A/132"></image>
+          <image class="avatar" src="{{avatar}}"></image>
       </view>
       <view style='margin-top:64px;' class="weui-msg__text-area">
           <view class="weui-msg__title">邀请内容</view>
-          <view style='margin-top:16px;' class="weui-msg__desc font-color_444 font-size_14">“毛宇” 邀请您加入 “百邦汽车美容”，一起为客户提供优质服务。（30分钟内有效）</view>
+          <view style='margin-top:16px;' class="weui-msg__desc font-color_444 font-size_14">“{{nickName}}” 邀请您加入 “{{shopName}}”，一起为客户提供优质服务。（30分钟内有效）</view>
       </view>
       <view style='margin-top:52px;' class="weui-msg__opr-area">
           <view class="weui-btn-area">
-              <button class="weui-btn" type="primary" open-type='share'>分享给微信好友</button>              
+            <button wx:if="{{false == showShare}}" class="weui-btn" type="primary" bindtap='onCreate'>申请店员名额</button> 
+            <button wx:else class="weui-btn" type="primary" open-type='share'>分享给微信好友</button>              
           </view>
       </view>      
   </view>
