--- a/pages/addMoreOrder/addMoreOrder.wxml
+++ b/pages/addMoreOrder/addMoreOrder.wxml
@@ -1,45 +1,47 @@
 <!--pages/addMoreOrder/addMoreOrder.wxml-->
-<view class="weui-cells weui-cells_after-title">
-  <view class="weui-cell weui-cell_input">
-      <view class="weui-cell__hd">
-          <view class="weui-label">车牌号</view>
-      </view>
-      <input class="weui-cell__bd weui-input" placeholder='请输入车牌号'></input>
-  </view>
-  <view class="weui-cell weui-cell_input">
-      <view class="weui-cell__hd">
-          <view class="weui-label">洗车时间</view>
-      </view>
-      <view class="weui-cell__bd weui-input">4月25日</view>
-      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </view>
-  <view class="weui-cell weui-cell_input" bindtap='onShowPaymentView'>
-      <view class="weui-cell__hd">
-          <view class="weui-label">付款方式</view>
-      </view>
-      <view class="weui-cell__bd weui-input">{{mode.name}}</view>
-      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </view>
-</view>
-
-<!-- 现金结账视图 -->
-<view wx:if="{{'会员卡' != mode.value}}" class="weui-cells__title">补充信息（选填）</view>
-<view wx:if="{{'现金' == mode.value}}" class="weui-cells weui-cells_after-title">
+<form bindsubmit="onPayment">
+  <view class="weui-cells weui-cells_after-title">
     <view class="weui-cell weui-cell_input">
         <view class="weui-cell__hd">
-            <view class="weui-label">现金</view>
+            <view class="weui-label">车牌号</view>
         </view>
-        <view class="weui-cell__bd">
-            <input class="weui-input" placeholder="请输入现金数额"/>
-        </view>
+        <input name="plateNumber" class="weui-cell__bd weui-input" placeholder='请输入完整的车牌号' maxlength='7' bindinput="bindPlateNumberInput" value="{{plateNumber}}"></input>
     </view>
-</view>
-<view wx:if="{{'会员卡' != mode.value}}" class="button_margin_16 margin-top_16">
-  <view style='color:#40739e' class="font-size_13" bindtap='onShowEditRemark'>添加备注</view>
-  <view class="font-size_13 font-color_cell_value">“通过微信转账给我”</view>
-</view>
+    <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__hd">
+            <view class="weui-label">洗车时间</view>
+        </view>
+        <view class="weui-cell__bd weui-input">{{dateUI}}</view>
+        <view class="weui-cell__ft"></view>
+    </view>
+    <view class="weui-cell weui-cell_input" bindtap='onShowPaymentView'>
+        <view class="weui-cell__hd">
+            <view class="weui-label">付款方式</view>
+        </view>
+        <view class="weui-cell__bd weui-input">{{mode.name}}</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+    </view>
+  </view>
 
-<button style='margin-top:112rpx;' class="button button_margin_16" type="primary" bindtap="onPayment">确认补录</button>
+  <!-- 现金结账视图 -->
+  <view class="weui-cells__title">补充信息</view>
+  <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+              <view class="weui-label">金额</view>
+          </view>
+          <view class="weui-cell__bd">
+              <input name="amount" type="number" class="weui-input" placeholder="请输入洗车金额"/>
+          </view>
+      </view>
+  </view>
+  <!-- <view wx:if="{{'会员卡' != mode.value}}" class="button_margin_16 margin-top_16">
+    <view style='color:#40739e' class="font-size_13" bindtap='onShowEditRemark'>添加备注</view>
+    <view class="font-size_13 font-color_cell_value">“通过微信转账给我”</view>
+  </view> -->
+
+  <button style='margin-top:112rpx;' class="button button_margin_16" type="primary" formType="submit">确认补录</button>
+</form>
 
 <!-- 结账方式选择视图 -->
 <van-popup
@@ -57,7 +59,7 @@
   
   <view class="weui-cells weui-cells_after-title">
       <checkbox-group bindchange="checkboxChange">
-          <label class="weui-cell weui-check__label payment-popup-view_cell" wx:for="{{checkboxItems}}" wx:key="value">
+          <label class="weui-cell weui-check__label payment-popup-view_cell" wx:for="{{payTypes}}" wx:key="value">
               <checkbox class="weui-check" value="{{item.value}}" checked="{{item.checked}}"/>
 
               <view class="weui-cell__hd weui-check__hd_in-checkbox">
