--- a/pages/editEmploye/editEmploye.wxml
+++ b/pages/editEmploye/editEmploye.wxml
@@ -1,21 +1,23 @@
 <!--pages/editEmploye/editEmploye.wxml-->
-<view class="weui-cells__title">备注名</view>
-<view class="weui-cells weui-cells_after-title">
-    <view class="weui-cell weui-cell_input">
-        <view class="weui-cell__bd">
-            <input class="weui-input" placeholder="请输入店员备注名" />
-        </view>
-    </view>
-</view>
+<form bindsubmit="onSave">
+  <view class="weui-cells__title">备注名</view>
+  <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__bd">
+              <input name="alias" class="weui-input" placeholder="请输入店员备注名" value="{{alias}}" />
+          </view>
+      </view>
+  </view>
 
-<view class="weui-cells__title">开关打开后，店员能够直接从客户的会员卡中扣款</view>
-<view class="weui-cells weui-cells_after-title">
-    <view class="weui-cell weui-cell_switch">
-        <view class="weui-cell__bd">会员卡扣款</view>
-        <view class="weui-cell__ft">
-            <switch checked />
-        </view>
-    </view>
-</view>
+  <view class="weui-cells__title">开关打开后，店员能够直接从客户的会员卡中扣款</view>
+  <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_switch">
+          <view class="weui-cell__bd">会员卡扣款</view>
+          <view class="weui-cell__ft">
+              <switch checked="{{useBalance}}" name="useBalance" />
+          </view>
+      </view>
+  </view>
 
-<button style='margin-top:112rpx;' class="button_margin_16" type="primary" bindtap="onSave">保存</button>
+  <button style='margin-top:112rpx;' class="button_margin_16" type="primary" formType="submit">保存</button>
+</form>
