--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -67,6 +67,6 @@
     <view style='margin-right:14px;' class="payment-popup-view_header-btn"></view>
   </view>
   <view style='color:#1AAD19' class="payment-popup-view_btn payment-popup-view_line" bindtap='onPayment'>洗车结账</view>
-  <view class="payment-popup-view_btn payment-popup-view_line" bindtap='onCancelOrder'>取消预约</view>
+  <view wx:if="{{true == showCancelBtn}}" class="payment-popup-view_btn payment-popup-view_line" bindtap='onCancelOrder'>取消预约</view>
   <view wx:if="{{true == showWYBtn}}" class="payment-popup-view_btn">车主违约</view>
 </van-popup>
